2014-12-12  Zhenqiang Chen  <zhenqiang.chen@arm.com>

	* gcc.dg/pr64007.c: New test.

2014-12-12  Bin Cheng  <bin.cheng@arm.com>

	* gcc.target/aarch64/ldp_stp_2.c: Make test less vulnerable.
	* gcc.target/aarch64/ldp_stp_3.c: Ditto.

2014-12-11  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/builtin-arith-overflow-1.c (fn2): Take signed char.
	(fn3): Likewise.

2014-12-11  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61324
	* g++.dg/pr61324.C: New testcase by Trevor Saunders.
	* g++.dg/tm/pr51411-2.C: Update se the extern function is
	not eliminated early.
	* gcc.target/i386/pr57756.c: Turn extern inline into static inline.

2014-12-11  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/42108
	* gfortran.dg/pr42108.f90: Amend.

2014-12-11  Manuel López-Ibáñez  <manu@gcc.gnu.org>

        * gfortran.dg/do_iterator.f90: Remove bogus dg-warning.

2014-12-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm_neon.h (vrndqn_f32): Rename to...
	(vrndnq_f32): ... this.
	(vrndqa_f32): Rename to...
	(vrndaq_f32): ... this.
	(vrndqp_f32): Rename to...
	(vrndpq_f32): ... this.
	(vrndqm_f32): Rename to...
	(vrndmq_f32): ... this.
	(vrndx_f32): New intrinsic.
	(vrndxq_f32): Likewise.

2014-12-11  Kyrylo Tkachov  kyrylo.tkachov@arm.com

	* lib/target-utils.exp: New file.
	* lib/gcc-defs.exp (${tool}_check_unsupported_p): Delete.
	Include target-utils.exp.
	* lib/objc.exp: Likewise.
	* lib/mike-gcc.exp: Load target-utils.exp.
	* lib/mike-g++.exp: Likewise.
	* lib/go-torture.exp: Likewise.
	* lib/fortran-torture.exp: Likewise.
	* lib/c-torture.exp: Likewise.

2014-12-10  Ilya Tocar  <ilya.tocar@intel.com>

	* gcc.target/i386/funcspec-5.c: Test avx512f and knl.

2014-12-10  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/62021
	* gcc.dg/vect/pr62021.c: New test.

2014-12-10  Jakub Jelinek  <jakub@redhat.com>
	    Evgeny Stupachenko  <evstupac@gmail.com>

	PR target/64252
	* gcc.dg/vect/pr64252.c: New test.
	* gcc.dg/pr64252.c: New test.